Refactor: 중복 검증과 표준 API 적용으로 애플리케이션 단순화